Feature: Atualização de Sintaxe das páginas

--- a/css.html
+++ b/css.html
@@ -33,7 +33,7 @@
     <nav>
         <ul>
             <li><a href="index.html">⬅️ Guia HTML</a></li>
-            <li><a href="js.html">➡️ Guia JavaScript</a></li>
+            <li><a href="js.html">⬅️ Guia JavaScript</a></li>
             <li class="separator">|</li>
             <li><a href="#seletores">Seletores</a></li>
             <li><a href="#layout">Layout e Display</a></li>
