Update: Informações pessoais e de contato de John Kayron no sobre.html

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <nav>
         <ul>
             <li><a href="css.html">➡️ Guia CSS</a></li>
-            <li><a href="js.html">➡️ Guia JavaScript</a>
-            </li>
+            <li><a href="js.html">➡️ Guia JavaScript</a></li>
+            <li><a href="sobre.html">➡️ Sobre</a></li>
             <li class="separator">|</li>
 
             <li><a href="#estrutura">Estrutura</a></li>
