--- a/js.html
+++ b/js.html
@@ -35,6 +35,7 @@
         <ul>
             <li><a href="index.html">⬅️ Guia HTML</a></li>
             <li><a href="css.html">⬅️ Guia CSS</a></li>
+            <li><a href="sobre.html">⬅️ Sobre</a></li>
             <li class="separator">|</li>
 
             <li><a href="#dom-selecao">Seleção de Elementos</a></li>
