--- a/css.html
+++ b/css.html
@@ -34,6 +34,7 @@
         <ul>
             <li><a href="index.html">⬅️ Guia HTML</a></li>
             <li><a href="js.html">⬅️ Guia JavaScript</a></li>
+            <li><a href="sobre.html">⬅️ Sobre</a></li>
             <li class="separator">|</li>
             <li><a href="#seletores">Seletores</a></li>
             <li><a href="#layout">Layout e Display</a></li>
